--- a/MassBussTesst/MassBussTesst.csproj
+++ b/MassBussTesst/MassBussTesst.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IMessageSubscriber.cs" />
+    <Compile Include="OrderedMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Szyna.cs" />
