--- a/MassBussTesst/MassBussTesst.csproj
+++ b/MassBussTesst/MassBussTesst.csproj
@@ -59,11 +59,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IMessageSubscriber.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="OrderedMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Szyna.cs" />
     <Compile Include="SzynaTests.cs" />
+    <Compile Include="TestingSubscriber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
