--- a/MassBussTesst/packages.config
+++ b/MassBussTesst/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net40" />
   <package id="Magnum" version="2.1.2" targetFramework="net40" />
   <package id="MassTransit" version="2.9.5" targetFramework="net40" />
   <package id="MassTransit.MSMQ" version="2.9.5" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="System.Data.SQLite" version="1.0.92.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.92.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.EF6" version="1.0.92.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Linq" version="1.0.92.0" targetFramework="net40" />
 </packages>
