--- a/MassBussTesst/MassBussTesst.csproj
+++ b/MassBussTesst/MassBussTesst.csproj
@@ -88,6 +88,7 @@
     <Compile Include="SekwencjeServiceTests.cs" />
     <Compile Include="Szyna.cs" />
     <Compile Include="SzynaTests.cs" />
+    <Compile Include="TestHelper.cs" />
     <Compile Include="TestingSubscriber.cs" />
   </ItemGroup>
   <ItemGroup>
